[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zarus-core"
version = "0.3.0"
description = "Reusable core package with MQTT services, configuration reading, and shared logging"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Zarus Core Contributors" }
]
dependencies = [
  "paho-mqtt>=1.6.1,<2.0.0",
  "mysql-connector-python>=8.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
